--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,10 @@ ENV TZ Europe/Moscow
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
+RUN apk update && apk add python3-dev \
+                          gcc \
+                          libc-dev \
+                          libffi-dev
 
 RUN pip install --upgrade pip
 COPY ./req.txt .
