--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,7 @@ ENV PYTHONUNBUFFERED 1
 RUN apk update && apk add python3-dev \
                           gcc \
                           libc-dev \
-                          libffi-dev \
-                          libpq-dev 
+                          libffi-dev 
                           
 RUN sudo apt-get install python3-psycopg2
 
