--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ RUN apk update && apk add python3-dev \
                           libc-dev \
                           libffi-dev 
                           
-RUN apt-get install python3-psycopg2
+RUN apk install python3-psycopg2
 
 RUN pip install --upgrade pip
 COPY ./req.txt .
