--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,7 @@ RUN apk update && apk add python3-dev \
                           libffi-dev 
 
 RUN pip install --upgrade pip
-RUN pip install psycopg2
+RUN pip install python3-psycopg2
 COPY ./req.txt .
 RUN pip install --no-cache-dir -r req.txt
 
