--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,9 +8,9 @@ RUN apk update && apk add python3-dev \
                           gcc \
                           libc-dev \
                           libffi-dev 
+RUN apt install sudo && sudo apt-get install python3-psycopg2
 
 RUN pip install --upgrade pip
-RUN sudo apt-get install python3-psycopg2
 COPY ./req.txt .
 RUN pip install --no-cache-dir -r req.txt
 
