--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ RUN apk update && apk add python3-dev \
                           gcc \
                           libc-dev \
                           libffi-dev 
-RUN apt install sudo && sudo apt-get install python3-psycopg2
+RUN install python3-psycopg2
 
 RUN pip install --upgrade pip
 COPY ./req.txt .
