--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ RUN apk update && apk add python3-dev \
                           gcc \
                           libc-dev \
                           libffi-dev \
-                          sudo
+                          sudo \ apt-get
                           
 RUN sudo apk install python3-psycopg2
 
