--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,7 @@ RUN apk update && apk add python3-dev \
                          
 
 RUN pip install --upgrade pip
+RUN pip install Pillow
 COPY ./req.txt .
 RUN pip install --no-cache-dir -r req.txt
 
