--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - static_volume/:/usr/src/app/static/
       - media_volume/:/usr/src/app/media/
     restart: always
-    expose:
-      - 8000
+    ports:
+      - 8000:8000
     depends_on:
       - db
 
