--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3'
+version: '3.8'
 
 services:
   web:
     build: ./
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
       - static_volume/:/usr/src/app/static/
       - media_volume/:/usr/src/app/media/
     restart: always
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     depends_on:
       - db
 
