--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,16 +1,13 @@
-version: '3.8'
+version: '3'
 
 services:
   web:
     build: ./
-    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
-      - static_volume/:/usr/src/app/static/
-      - media_volume/:/usr/src/app/media/
-    restart: always
-    expose:
-      - 8000
+    ports:
+      - 8000:8000
     depends_on:
       - db
 
@@ -18,24 +15,10 @@ services:
     image: postgres:11.11-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    restart: always
     environment:
-      - POSTGRES_USER=JonyDB
+       - POSTGRES_USER=JonyDB
       - POSTGRES_PASSWORD=jonydb876
       - POSTGRES_DB=Storage
 
-  nginx:
-    build: /root/Chat/backend/nginx
-    volumes:
-      - static_volume/:/usr/src/app/static/
-      - media_volume/:/usr/src/app/media/
-    restart: always
-    ports:
-      - 1337:80
-    depends_on:
-      - web
-
 volumes:
   postgres_data:
-  static_volume:
-  media_volume:
