--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,14 +3,14 @@ version: '3'
 services:
   web:
     build: ./
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
       - static_volume/:/usr/src/app/static/
       - media_volume/:/usr/src/app/media/
     restart: always
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     depends_on:
       - db
 
@@ -24,16 +24,16 @@ services:
       - POSTGRES_PASSWORD=jonydb876
       - POSTGRES_DB=Storage
 
-#   nginx:
-#     build: /root/Chat/backend/nginx
-#     volumes:
-#       - static_volume/:/usr/src/app/static/
-#       - media_volume/:/usr/src/app/media/
-#     restart: always
-#     ports:
-#       - 1337:80
-#     depends_on:
-#       - web
+  nginx:
+    build: /root/Chat/backend/nginx
+    volumes:
+      - static_volume/:/usr/src/app/static/
+      - media_volume/:/usr/src/app/media/
+    restart: always
+    ports:
+      - 1337:80
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
