--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - static_volume/:/usr/src/app/static/
       - media_volume/:/usr/src/app/media/
     restart: always
-    expose:
-      - 8000
+    ports:
+    - "8080:8080"
     depends_on:
       - db
 
