--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     location /static/ {
-         root /usr/src/app/; 
+         root ; 
     }
 
     location /media/ {
