--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   web:
     build: ./
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
       - static_volume/:/usr/src/app/static/
@@ -10,6 +11,14 @@ services:
     restart: always
     ports:
     - "8080:8080"
+    depends_on:
+      - migration
+      - db
+      
+  migration:
+    command: python manage.py migrate --noinput
+    volumes:
+      - ./:/usr/src/app/
     depends_on:
       - db
 
