--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   web:
     build: ./
+    image: uzman
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
@@ -16,6 +17,7 @@ services:
       - db
       
   migration:
+    image: uzman
     command: python manage.py migrate --noinput
     volumes:
       - ./:/usr/src/app/
