--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   web:
     build: ./
-    image: python3.8
+    image: backend
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
@@ -17,7 +17,7 @@ services:
       - db
       
   migration:
-    image: python3.8
+    image: backend
     command: python manage.py migrate --noinput
     volumes:
       - ./:/usr/src/app/
