--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: ./
     command: >
-      sh -c "python manage.py collectstatic --noinput &&
+      sh -c "python manage.py flush --no-input &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     volumes:
