--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   web:
     build: ./
+    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
       - static_volume/:/usr/src/app/static/
