--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:lts-alpine
 
 # устанавливаем простой HTTP-сервер для статики
-RUN npm install -g http-server
+RUN npm install -g http-server \
+     npm install axios
 
 # делаем каталог 'app' текущим рабочим каталогом
 WORKDIR /app
