--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:lts-alpine
 
 # устанавливаем простой HTTP-сервер для статики
-RUN npm install -g http-server \
-     npm install axios
+RUN npm install -g http-server
 
 # делаем каталог 'app' текущим рабочим каталогом
 WORKDIR /app
@@ -16,4 +15,8 @@ RUN npm install
 # копируем файлы и каталоги проекта в текущий рабочий каталог (т.е. в каталог 'app')
 COPY . .
 
+# собираем приложение для production с минификацией
+RUN npm run build
+
+EXPOSE 8080
 CMD [ "http-server", "dist" ]
