--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     working_dir: /srv/app
     volumes:
-      - ./app:/srv/app
+      - ./:/srv/app
       - /srv/app/node_modules
     stdin_open: true
     environment:
