--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -4,13 +4,10 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    working_dir: /srv/app
+    working_dir: /app
     volumes:
-      - ./:/srv/app
-      - /srv/app/node_modules
-    stdin_open: true
-    environment:
-      - HOST=0.0.0.0
-      - CHOKIDAR_USEPOLLING=true
+      - ./:/app
+      - /app/node_modules
+    restart: always
     ports:
       - 8080:8080
