--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,6 +16,9 @@ COPY package*.json ./
 # устанавливаем зависимости проекта
 RUN npm install
 
+RUN npm install vuex --save 
+RUN npm install axios
+
 # копируем файлы и каталоги проекта в текущий рабочий каталог (т.е. в каталог 'app')
 COPY . ./app
 
