--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    command: npm run serve 0.0.0.0:8080
+    command: npm run serve
     working_dir: /app
     volumes:
       - ./:/app
