--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -2,10 +2,10 @@ secret_key: 'django-insecure-gfu=mf#!+0am+p$a4^3i=^tz*17f71tma7p!i$ildo36b5uw@&'
 
 
 postgres:
-  database: Storage
-  user: JonyDB
+  database: storage
+  user: jonydb
   password: jonydb876
-  host: db
+  host: 80.249.145.16
   port: 5432
 
 
