--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,7 +14,7 @@ COPY package*.json ./
 
 # устанавливаем зависимости проекта
 RUN npm install
-RUN npm install -g npm@8.12.2
+RUN npm install -g npm
 
 RUN npm install vuex --save 
 RUN npm install axios
